creusot/tests/should_fail/bug/436_1.stderr
error: called Logic { prophetic: true } function in Logic { prophetic: false } context "creusot_contracts::__stubs::fin"
  --> 436_1.rs:10:5
   |
10 |     pearlite! { *(^x).g }
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `pearlite` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

